Fixed work top padding. Fixed CV spacing issues

--- a/source/assets/css/_layout/_content.scss
+++ b/source/assets/css/_layout/_content.scss
@@ -56,7 +56,7 @@ section.work {
 
     @include bp(phone) {
         height: auto;
-        min-height: auto;
+        min-height: initial;
     }     
 }
 
@@ -97,6 +97,7 @@ section.work {
 		width: 100%;
 		height: 200px;
 		opacity: 1;
+		@include translateX(0px);
 		background-position: center center;
     	background-size: contain;
     	background-repeat: no-repeat;
