--- a/source/assets/css/_layout/_cv.scss
+++ b/source/assets/css/_layout/_cv.scss
@@ -117,6 +117,12 @@
 				width: 100%;
 				margin-bottom: 20px;
 			}
+
+			&:last-child {
+				@include bp(phone) {
+					margin-bottom: 0px;
+				}
+			}			
 		}
 
 		@include bp(phone) {
@@ -127,6 +133,10 @@
 
 	.item {
 		margin-bottom: 30px;
+		
+		&:last-child {
+			margin-bottom: 0;
+		}
 	}
 
 	.heading {
@@ -139,12 +149,22 @@
 		}
 	}
 
-	.desc li {
-		list-style-type: disc;
-		list-style-position: inside;
-		text-indent: -10px;
-		padding-left: 10px;
+	.desc {
+		ul:last-child {
+			margin-bottom: 0;
+		}
 
+		li {
+			margin-bottom: 10px;
+			padding-left: 10px;
+			list-style-type: disc;
+			list-style-position: inside;
+			text-indent: -10px;
+
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
 
 	}
 }
